// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-menu-button Borderless 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--borderless"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          eBay Menu without borders!
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button Default 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          eBay Menu
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button Disabled 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          eBay Menu
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button Expanded 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          eBay Menu
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
  <span
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        aria-checked={false}
        aria-hidden={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span>
          item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked={false}
        aria-hidden={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <span>
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked={false}
        aria-hidden={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        <span>
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-small"
          focusable={false}
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</span>
`;

exports[`Storyshots ebay-menu-button Fixed Width 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Menu has a button width
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button Multi-Select Menu Button 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Filter
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button Priorities 1`] = `
Array [
  <span
    className="menu-button"
  >
    <button
      a11y-text="Menu"
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--primary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Primary
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--dropdown"
          focusable={false}
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-dropdown"
          />
        </svg>
      </span>
    </button>
  </span>,
  <span
    className="menu-button"
  >
    <button
      a11y-text="Menu"
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--tertiary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Tertiary
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--dropdown"
          focusable={false}
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-dropdown"
          />
        </svg>
      </span>
    </button>
  </span>,
]
`;

exports[`Storyshots ebay-menu-button Reverse (Menu grows to the left) 1`] = `
<div
  style={
    Object {
      "marginLeft": "100px",
    }
  }
>
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Menu grows to the left
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--dropdown"
          focusable={false}
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-dropdown"
          />
        </svg>
      </span>
    </button>
  </span>
</div>
`;

exports[`Storyshots ebay-menu-button Single-Select Menu Button (collapse on click) 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Sort order: Price
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button Single-Select Menu Button (item.checked) 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Sort order
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button Single-Select Menu Button (menu.checked) 1`] = `
Array [
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Topic: Phones
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--dropdown"
          focusable={false}
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-dropdown"
          />
        </svg>
      </span>
    </button>
  </span>,
  " ",
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Sort order: Relevance
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--dropdown"
          focusable={false}
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-dropdown"
          />
        </svg>
      </span>
    </button>
  </span>,
]
`;

exports[`Storyshots ebay-menu-button Variants 1`] = `
Array [
  <h3>
    Button
  </h3>,
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Menu inside the form"
      aria-live={null}
      className="btn menu-button__button btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Button
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--dropdown"
          focusable={false}
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-dropdown"
          />
        </svg>
      </span>
    </button>
  </span>,
  <h3>
    Form
  </h3>,
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Menu inside the form"
      aria-live={null}
      className="btn menu-button__button btn--form"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Form
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--dropdown"
          focusable={false}
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-dropdown"
          />
        </svg>
      </span>
    </button>
  </span>,
  <h3>
    Overflow
  </h3>,
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Menu"
      className="menu-button__button icon-btn"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="icon icon--overflow"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-overflow"
        />
      </svg>
    </button>
  </span>,
]
`;

exports[`Storyshots ebay-menu-button With Custom Label 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span
          style={
            Object {
              "background": "url(\\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='15' viewBox='0 0 5 3'%3E%3Cpath d='M0 0h5v3H0z'/%3E%3Cpath fill='%23D00' d='M0 1h5v2H0z'/%3E%3Cpath fill='%23FFCE00' d='M0 2h5v1H0z'/%3E%3C/svg%3E\\") no-repeat 50% 50%",
              "display": "inline-block",
              "height": "20px",
              "marginRight": "8px",
              "verticalAlign": "middle",
              "width": "26px",
            }
          }
        />
        Fun with flags!
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button With Separator 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Complex menu
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button With icon 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <svg
          aria-hidden={true}
          className="icon icon--settings"
          focusable={false}
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-settings"
          />
        </svg>
        <span>
          Settings
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--dropdown"
        focusable={false}
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-dropdown"
        />
      </svg>
    </span>
  </button>
</span>
`;

exports[`Storyshots ebay-menu-button Without toggle icon 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span>
      Menu
    </span>
  </button>
</span>
`;
